[package]
name = "bbos"
version = "0.1.0"
authors = ["Kevin Leimkuhler <me@kleimkuhler.com>"]

[dependencies]

# profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
